# stratomics

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example.yaml
examples/: make_synthetic.py
src/stratomics/: __init__.py  cli.py  cluster.py  compare.py  io.py  pipeline.py  plots.py  score.py  survival.py
tests/: conftest.py  test_cluster.py  test_compare_survival.py  test_pipeline.py  test_score.py
