[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratomics"
version = "0.1.0"
description = "A generic, signature-driven framework for sample stratification and multi-omics characterization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "zqw", email = "zqw2930@163.com" }]
keywords = ["bioinformatics", "stratification", "signature", "consensus-clustering", "survival"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "statsmodels>=0.13",
    "lifelines>=0.27",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
stratomics = "stratomics.cli:app"

[project.urls]
Homepage = "https://github.com/zqw123-z/stratomics"
Issues = "https://github.com/zqw123-z/stratomics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stratomics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
